[project]
name = "imagehash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brishen", email = "brishen.hawkins@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
